--- a/Hiroshima.html
+++ b/Hiroshima.html
@@ -21,7 +21,8 @@
 		</div>
 	
 	</header>
-	<div id="Main">
+	<main>
+	<div class="centrepage">
 		<h3>Capitale de la région d’Hiroshima et ville la plus importante de la région de Chugoku, celle que l’on appel la ville de la paix offre un patrimoine culturel aussi riche que ces paysages. La ville fait partie de ces endroits incontournable à visiter lors d’un voyage sur l’archipel. Car derrière le traumatisme et les cicatrices de cette ville, se cache bien des trésors. </h3>
 	<div id="block1">
 		<img alt="Chateau d'Hiroshima" src="./pictures/HiroshimaCastle.jpg" width="460px" Height="360px"/>
@@ -47,9 +48,11 @@ N'oubliez pas de repartir avec le tampon officiel du château (disponible sur la
 		</p>
 	</div>
 	</div>
+	</main>
 	
 <!-- Bottom Page-->
-<div id="footer">
+<footer>
+<div class="piedpage">
 	
 	<a href="https://www.instagram.com/" target="_blank" ><img alt="instagram" src="./pictures/instagram.png"width="40px" height="40px"/></a>
 	<a href="https://twitter.com/" target="_blank" ><img alt="twitter" src="./pictures/twitter.png" width="40px" height="40px"/></a>
@@ -57,5 +60,6 @@ N'oubliez pas de repartir avec le tampon officiel du château (disponible sur la
 	
 	<!-- icones provided by iconmonstr.com -->
 </div>
+</footer>
 </body>
 </html>
