--- a/Kyushu.html
+++ b/Kyushu.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<div id="header">
+	<header>
+	<div class="tete">
 		<div class="Navigation">
 		   <a href="Index.html"> Home</a> |
 		   <a href="Index.html#Trips">Travelog </a> 
@@ -20,7 +21,9 @@
 		</div>
 	
 	</div>
-	<div id="Main">
+	</header>
+	<main>
+	<div class="centrepage">
 		<h3>Troisième plus grand île de l’archipel et berceau de la civilisation Japonaise. Certain moins populaire que Honshu, le climat subtropicale de cette partie du Japon saura vous charmer comme il m’a charmer. Adorateur de Onsen, vous y trouverez votre bonheur. Plage, forêt et volcan serons aussi au rendez-vous 
 		( le <a href="https://www.google.fr/search?q=mont+aso&rlz=1C1CHBF_frFR756FR756&oq=mont+aso&aqs=chrome..69i57j69i60j0l4.1287j1j7&sourceid=chrome&ie=UTF-8" target="_blank" >mont Aso </a> et le <a href="https://fr.wikipedia.org/wiki/Sakurajima" target="_blank" > Sakurajima </a> sont, entre autre, toujours en activité).</h3>
 	<div id="block1">
@@ -47,9 +50,11 @@
 		</p>
 	</div>
 	</div>
+	</main>
 
 <!-- Bottom Page-->
-<div id="footer">
+<footer>
+<div class="piedpage">
 	
 	<a href="https://www.instagram.com/" target="_blank" ><img alt="instagram" src="./pictures/instagram.png"width="40px" height="40px"/></a>
 	<a href="https://twitter.com/" target="_blank" ><img alt="twitter" src="./pictures/twitter.png" width="40px" height="40px"/></a>
@@ -57,5 +62,6 @@
 	
 	<!-- icones provided by iconmonstr.com -->
 </div>
+</footer>
 </body>
 </html>
